--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
               </div>
           </div>
         
-        <a href="#" class="siempre-al-top "><span class="material-symbols-outlined">merge_type</span></a>        
+        <!-- <a href="#" class="siempre-al-top "><span class="material-symbols-outlined">merge_type</span></a>         -->
 
     </main>
 
