--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
+</head>
+
 <body>
     <header>
         <div class="menu-fijo">
@@ -22,7 +24,7 @@
                         <li><a class="equipos" href="./pages/pagina2.html" ><img src="./img/fcb.png" alt=""><img src="./img/psg.png" alt=""></a></li>
                         <li><a class="equipos" href="#"><img src="./img/afa.png" alt=""></a></li>
                         <li><a class="equipos" href="#"><img src="./img/trofeo.png" alt=""></a></li>
-                        <li><a class="galeria-logo" href="#"><img src="./img/galeria.png" alt=""></a></li>
+                        <li><a class="galeria-logo" href="./galeria.html"><img src="./img/galeria.png" alt=""></a></li>
                         <li><a class="equipos" href="contacto.html"><span class="mail material-symbols-outlined">mail</span></a></li> 
                         <li><a class="equipos" href="#nosotros"><img class="nos" src="./img/nosotros.svg" alt=""></a></li>                    
                     </ul>
